make a simple Register page

--- a/angular-src/src/app/component/home/home.component.html
+++ b/angular-src/src/app/component/home/home.component.html
@@ -1,3 +1,23 @@
-<p>
-  home works!
-</p>
+<div class="jumbotron text-center">
+  <h1>MEAN Authentication App</h1>
+  <p class="lead">welcome</p>
+  <div>
+    <a class="btn btn-primary" [routerLink]="['/register']">Register</a>
+    <a class="btn btn-primary" [routerLink]="['/login']">Login</a>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-4">
+    <h3>Express backend</h3>
+    <p>A rock solid nodejs express server</p>
+  </div>
+  <div class="col-md-4">
+    <h3>Angular-cli</h3>
+    <p>generate angular components</p>
+  </div>
+  <div class="col-md-4">
+    <h3>JWT tokens</h3>
+    <p>Full features with auth tokens</p>
+  </div>
+</div>
